[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI Social Media Sentiment Analysis System"
requires-python = ">=3.11"
dependencies = [
    "asyncpraw>=7.8.1",
    "langchain-core>=0.3.75", 
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "praw>=7.8.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
    "numpy>=1.21.0",
]